<resources>
    <string name="app_name">PAC</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add">+</string>
    <string name="search">Search</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="publish">Publicar</string>
    <string name="cancel">Cancelar</string>
    <string name="insert_photo">Inserir foto</string>
    <string name="category">Categoria</string>
    <string name="new_service">Cadastro de serviço</string>
    <string name="new_service_sucess">Serviço cadastrado com sucesso</string>
</resources>